syntax = "proto3";

package api.common;

option go_package = "api-training-go/api/common;common";
option java_multiple_files = true;
option java_package = "api.common";

// data
message ResponseData {
	uint64 id = 1;
}

enum UserStatus {
	// 正常
	ACTIVE = 0;
	// 不正常
	INACTIVE = 1;
}